--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,13 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
 
-    <item android:id="@+id/action_search"
-        android:title="@string/action_search"
+    <item android:id="@+id/action_reboot"
+        android:title="@string/reboot"
         android:orderInCategory="100"
         android:showAsAction="never" />
 </menu>
