--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -167,23 +167,12 @@
 
             </android.support.v7.widget.CardView>
 
-            <VideoView
+            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
                 android:id="@+id/videoView1"
                 android:layout_below="@+id/CardViewDeveloper"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:weightSum="1"
-                android:background="@color/background"
-                android:layout_below="@+id/videoView1"
-                android:id="@+id/test">
-
-
-            </LinearLayout>
 
         </RelativeLayout>
 
