--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
@@ -31,7 +29,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax"/>
+                app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -54,8 +52,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <Button
                 android:text="Download"
@@ -65,11 +62,9 @@
                 android:id="@+id/button"
                 android:layout_gravity="center"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                />
+                android:layout_marginTop="16dp" />
 
-            <android.support.v7.widget.CardView
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 card_view:cardBackgroundColor="@color/card_background"
@@ -99,7 +94,7 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
                         android:textStyle="bold"
-                        android:elevation="5dp"/>
+                        android:elevation="5dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -117,8 +112,7 @@
 
             </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 card_view:cardBackgroundColor="@color/card_background"
@@ -130,8 +124,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
                 android:paddingBottom="8dp"
-                android:layout_below="@+id/CradViewWhatsNew"
-                >
+                android:layout_below="@+id/CradViewWhatsNew">
 
                 <LinearLayout
                     android:orientation="vertical"
@@ -149,7 +142,7 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
                         android:textStyle="bold"
-                        android:elevation="5dp"/>
+                        android:elevation="5dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -168,11 +161,12 @@
             </android.support.v7.widget.CardView>
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="500dp"
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:id="@+id/videoView1"
-                android:layout_below="@+id/CardViewDeveloper"/>
-
+                android:src="@drawable/heroimage"
+                android:layout_below="@+id/CardViewDeveloper" />
 
         </RelativeLayout>
 
