--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -59,12 +60,25 @@
                 android:textColor="@color/buttonText"
                 android:layout_width="172dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/button"
+                android:id="@+id/downloadButton"
                 android:layout_gravity="center"
+                android:background="@color/primary"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp" />
 
-            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            <Button
+                android:text="Generate preview"
+                android:textColor="@color/buttonText"
+                android:layout_width="172dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/generateButton"
+                android:layout_gravity="center"
+                android:background="@color/primary"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_below="@+id/downloadButton"/>
+
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 card_view:cardBackgroundColor="@color/card_background"
@@ -76,7 +90,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
                 android:paddingBottom="20dp"
-                android:layout_below="@+id/button">
+                android:layout_below="@+id/generateButton">
 
                 <LinearLayout
                     android:orientation="vertical"
