--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -73,10 +73,24 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/generateButton"
                 android:layout_gravity="center"
+                android:visibility="gone"
                 android:background="@color/primary"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_below="@+id/downloadButton"/>
+
+            <Button
+                android:text="Install"
+                android:textColor="@color/buttonText"
+                android:layout_width="172dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/installButton"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                android:background="@color/primary"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_below="@+id/generateButton"/>
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
@@ -90,7 +104,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
                 android:paddingBottom="20dp"
-                android:layout_below="@+id/generateButton">
+                android:layout_below="@+id/installButton">
 
                 <LinearLayout
                     android:orientation="vertical"
