--- a/app/src/main/res/layout/full_screen.xml
+++ b/app/src/main/res/layout/full_screen.xml
@@ -9,6 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:onClick="click"
+        android:scaleType="fitCenter"
         android:transitionName="img"/>
 
 </LinearLayout>
