added icon remover and settings.xml with switch etc

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,4 +6,8 @@
         android:title="@string/reboot"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/action_settings"
+        android:title="@string/Settings"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
 </menu>
